--- a/src/app/componentes/resumo-profissional/resumo-profissional.component.html
+++ b/src/app/componentes/resumo-profissional/resumo-profissional.component.html
@@ -7,7 +7,7 @@
             <li>Experiência em programação web (CSS, HTML, Javascript).</li>
             <li>Experiência com bancos de dados SQL.</li>
             <li>Responsabilidade em analisar e corrigir defeitos do sistema.</li>
-            <li>omínio em analisar e melhorar o desempenho de funcionalidades já implantadas.</li>
+            <li>Domínio em analisar e melhorar o desempenho de funcionalidades já implantadas.</li>
             <li>Vivência em projetar, implementar e dar suporte a soluções para desenvolvimento de aplicativos.</li>
             <li>Conhecimento em infraestrutura de TI.</li>
             <li>Graduado em Sistema da Informação.</li>
