--- a/src/app/componentes/dados-pessoais/dados-pessoais.component.css
+++ b/src/app/componentes/dados-pessoais/dados-pessoais.component.css
@@ -1,3 +1,10 @@
 h1, h2, h3{
     text-align: center;
 }
+.bg-image {
+    background-image: url('../img/eu.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 30vh;
+    float: right; 
+  }
