Atualizar o experiencia-profissional.component.html

--- a/src/app/componentes/experiencia-profissional/experiencia-profissional.component.html
+++ b/src/app/componentes/experiencia-profissional/experiencia-profissional.component.html
@@ -22,7 +22,7 @@
     <li>Domínio na linguagem Java.</li>
     <li>Resolução de problemas.</li>
     <li>
-      Conhecimento de JPA (Java Persistence API), CSS, JavaScript, Hibernate,
+      Conhecimento de JPA (Java Persistence API), CSS, JavaScript, Hubernate,
       Spring Framework, SQL e Desenvolvimento de back-end.
     </li>
   </ul>
