--- a/src/app/componentes/dados-pessoais/dados-pessoais.component.css
+++ b/src/app/componentes/dados-pessoais/dados-pessoais.component.css
@@ -2,9 +2,11 @@ h1, h2, h3{
     text-align: center;
 }
 .bg-image {
-    background-image: url('../img/eu.png');
+    background-image: url('../img/eu.jpg');
     background-repeat: no-repeat;
     background-size: contain;
-    height: 30vh;
-    float: right; 
+    height: 50vh;
+    background-position: right; 
   }
+
+  
