--- a/src/app/componentes/dados-pessoais/dados-pessoais.component.html
+++ b/src/app/componentes/dados-pessoais/dados-pessoais.component.html
@@ -1,9 +1,10 @@
 
-<div class="class"  >
+<div class="class"   >
     <h1 >{{ name }}</h1>
     <h1>{{ job }}</h1>
     <div>
-      <a href="{{ linkedin }}">Linkedin</a>
+      
+      <i class="fa-brands fa-linkedin-in"><a href="{{ linkedin }}">Linkedin</a></i>
     </div>
     <p>{{ adress }}</p>
     <p>{{ telefone }}</p>
