--- a/src/app/componentes/dados-pessoais/dados-pessoais.component.css
+++ b/src/app/componentes/dados-pessoais/dados-pessoais.component.css
@@ -2,11 +2,14 @@ h1, h2, h3{
     text-align: center;
 }
 .bg-image {
-    background-image: url('../img/eu.jpg');
+    background-image: url('../img/eu.png');
     background-repeat: no-repeat;
     background-size: contain;
-    height: 50vh;
+    height: 200px;
     background-position: right; 
+    border-radius:200px;
+    
   }
+  
 
   
