--- a/src/app/componentes/experiencia-profissional/experiencia-profissional.component.html
+++ b/src/app/componentes/experiencia-profissional/experiencia-profissional.component.html
@@ -11,8 +11,8 @@
     <li>Contato com fornecedores.</li>
   </ul>
   <h3>
-    02/2007 – 08/2008 l Mcn Tecnolog&amp;Consulting Empresa Nacional de pequeno
-    porte do segmento de Consultoria. Programador Java Júnior.
+    02/2007 – 08/2008 l Mcn Tecnolog&amp;Consulting Empresa Nacional do segmento
+    de Consultoria. Programador Java Júnior.
   </h3>
   <ul>
     <li>Experiência em Desenvolvimento de software e Banco de dados.</li>
