--- a/src/app/componentes/resumo-profissional/resumo-profissional.component.html
+++ b/src/app/componentes/resumo-profissional/resumo-profissional.component.html
@@ -1,8 +1,7 @@
 <div class="class">
     <h2>Resumo Profissional</h2>
     <ul>
-        <li>2 anos de experiência como Programador Java em empresa Nacional de
-            pequeno porte do segmento de Consultoria.</li>
+        <li>2 anos de experiência como Programador Java em empresa Nacional do segmento de Consultoria.</li>
             <li>Sólidos conhecimentos em linguagem de programação Java.</li>
             <li>Experiência em programação web (CSS, HTML, Javascript).</li>
             <li>Experiência com bancos de dados SQL.</li>
