--- a/src/app/componentes/competencias/competencias.component.html
+++ b/src/app/componentes/competencias/competencias.component.html
@@ -1,10 +1,12 @@
 <div class="class">
-    <h2>COMPETÊNCIAS</h2>
-    <ul>
-        <li>Spring Boot</li>
-        <li>Angular</li>
-        <li>React</li>
-        <li>Banco de dados</li>
-        <li>Capacidade de analisar e resolver problemas.</li>
-    </ul>
+  <h2>COMPETÊNCIAS</h2>
+  <ul>
+    <li>Spring Boot</li>
+    <li>Angular</li>
+    <li>React</li>
+    <li>Node</li>
+    <li>Git/Github</li>
+    <li>Banco de dado SQLServer</li>
+    <li>Capacidade de analisar e resolver problemas.</li>
+  </ul>
 </div>
