--- a/src/app/componentes/experiencia-profissional/experiencia-profissional.component.html
+++ b/src/app/componentes/experiencia-profissional/experiencia-profissional.component.html
@@ -22,8 +22,8 @@
     <li>Domínio na linguagem Java.</li>
     <li>Resolução de problemas.</li>
     <li>
-      Conhecimento de JPA (Java Persistence API), CSS, JavaScript, Hibernate,
-      Spring Framework, SQL e Desenvolvimento de back-end.
+      JSP, CSS, JavaScript, Ajax, J2EE , Hibernate,
+      Struts, SQL, Ajax.
     </li>
   </ul>
 </div>
