--- a/src/app/componentes/dados-pessoais/dados-pessoais.component.css
+++ b/src/app/componentes/dados-pessoais/dados-pessoais.component.css
@@ -5,10 +5,10 @@ h1, h2, h3{
     background-image: url('../img/eu.png');
     background-repeat: no-repeat;
     background-size: contain;
-    height: 200px;
-    background-position: right; 
-    border-radius:200px;
-    
+    background-position: center; 
+    width: 120px;
+    height: 120px;
+    border-radius: 50px;
   }
   
 
