--- a/src/app/componentes/dados-pessoais/dados-pessoais.component.html
+++ b/src/app/componentes/dados-pessoais/dados-pessoais.component.html
@@ -1,14 +1,13 @@
-
-<div class="class"   >
+<div class="class">
+  <div class="bg-image"> </div> 
+    <h1>{{ name }}</h1>
+    <h2>{{ job }}</h2>
  
-    <h1 >{{ name }}</h1>
-    <h1>{{ job }}</h1 >
-      <div class="bg-image"></div>
-   
-    
-    <i class="fa-brands fa-linkedin-in"><a href="{{ linkedin }}" target='_blank' >Linkedin</a></i>
-    <p>{{ adress }}</p>
-    <p>{{ telefone }}</p>
-    <p>{{ email }}</p>
-  </div>
-  
+
+  <i class="fa-brands fa-linkedin-in"
+    ><a href="{{ linkedin }}" target="_blank">Linkedin</a></i
+  >
+  <p>{{ adress }}</p>
+  <p>{{ telefone }}</p>
+  <p>{{ email }}</p>
+</div>
